k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: default
spec:
  rules:
    - host: devops.local
      http:
        paths:
          # 1) Auth-service : /auth → FastAPI
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000

          # 2) Breweries-service : /breweries → Express.ts
          - path: /breweries
            pathType: Prefix
            backend:
              service:
                name: breweries-service
                port:
                  number: 3001

          # 3) Favorites : /favorites → Express.ts
          - path: /favorites
            pathType: Prefix
            backend:
              service:
                name: breweries-service
                port:
                  number: 3001

          # 4) Order-service : /orders → NestJS
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 4000

          # 5) Frontend : tout le reste → Next.js
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
